feat: Add ProdiApiService for fetching program study data and update related views
- Implemented ProdiApiService to handle API interactions for program studies.
- Updated API URL in config/app.php to point to the correct endpoint.
- Enhanced image handling in various views to use API storage paths.
- Refactored program study detail view to display fetched data dynamically.
- Updated routes to include ID parameters for detail views.
- Improved error handling and logging for API responses.
- Adjusted view templates for better data presentation and user experience.

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,10 @@
             "app/Helpers/PengumumanHelper.php",
             "app/Helpers/BeritaHelper.php",
             "app/Helpers/GaleriHelper.php",
-            "app/Helpers/ProfileKampusHelper.php"
+            "app/Helpers/ProfileKampusHelper.php",
+            "app/Helpers/LandingContentHelper.php",
+            "app/Helpers/FaqHelper.php",
+            "app/Helpers/ProdiHelper.php"
         ]
     },
     "autoload-dev": {
