--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+APP_API=http://127.0.0.1:8001/api/v1/landing/
+APP_API_STORAGE=http://127.0.0.1:8001/storage/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
